@@ -26,6 +26,7 @@ Pretty URLs 1.0RC                                              ???
  + Base: Absolutise relative URLs. (PrettyUrls-Filters.php, QueryString.php)
  ! Base: Don't cache sc or $context['session_var']. (PrettyUrls-Filters.php)
  ! Base: If the .htaccess file can't be written to, then don't enable rewriting. (install.php, Subs-PrettyUrls.php)
+ + Base: Use the chrome templates when installing. (install.php, PrettyUrls.php, PrettyUrls.template.php, etc)
 
 Pretty URLs 0.9                                                12 November, 2008
 ================================================================================
